--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
     <div class="container">
         <div class="projects-grid">
             <div class="box">
+                <a href="https://nagasakimark.github.io/howdoyouspell" target="_blank">
+                    <img src="./images/howdoyouspell.png" alt="How do you spell...?">
+                </a>
+            </div>
+            <div class="box">
                 <a href="https://nagasakimark.github.io/wordle" target="_blank">
                     <img src="./images/wordle.png" alt="Wordle">
                 </a>
