--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 </a>
             </div>
             <div class="box">
-                <a href="https://nagasakimark.github.io/boatrace" target="_blank">
-                    <img src="./images/boatrace.png" alt="Boat Race">
+                <a href="https://nagasakimark.github.io/globeguesser" target="_blank">
+                    <img src="./images/globeguesser.png" alt="Globe Guesser">
                 </a>
             </div>
             <div class="box">
