--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
 <body>
     <div class="container">
         <div class="projects-grid">
+		            <div class="box">
+                <a href="https://nagasakimark.github.io/fruitpoll" target="_blank">
+                    <img src="./images/fruitpoll.png" alt="Fruit Poll">
+                </a>
+            </div>
             <div class="box">
                 <a href="https://nagasakimark.github.io/howdoyouspell" target="_blank">
                     <img src="./images/howdoyouspell.png" alt="How do you spell...?">
