--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
     <div class="container">
         <div class="projects-grid">
 		            <div class="box">
+                <a href="https://nagasakimark.github.io/worksheetgenerator" target="_blank">
+                    <img src="./images/worksheetgenerator.png" alt="Worksheet Generator">
+                </a>
+            </div>
+		            <div class="box">
                 <a href="https://nagasakimark.github.io/fruitpoll" target="_blank">
                     <img src="./images/fruitpoll.png" alt="Fruit Poll">
                 </a>
