--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <body>
     <div class="container">
         <div class="projects-grid">
-		            <div class="box">
+		    <div class="box">
                 <a href="https://nagasakimark.github.io/worksheetgenerator" target="_blank">
                     <img src="./images/worksheetgenerator.png" alt="Worksheet Generator">
                 </a>
@@ -83,6 +83,11 @@
             <div class="box">
                 <a href="https://nagasakimark.github.io/wordle" target="_blank">
                     <img src="./images/wordle.png" alt="Wordle">
+                </a>
+            </div>
+		    <div class="box">
+                <a href="https://nagasakimark.github.io/japanguesser" target="_blank">
+                    <img src="./images/japanguesser.png" alt="Japan Guesser">
                 </a>
             </div>
             <div class="box">
