--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@
     <div class="container">
         <div class="projects-grid">
 		    <div class="box">
+                <a href="https://nagasakimark.github.io/hamanomachi2" target="_blank">
+                    <img src="./images/hamanomachi2.png" alt="Worksheet Generator">
+                </a>
+            </div>
+		    <div class="box">
+                <a href="https://nagasakimark.github.io/hamanomachi2audio" target="_blank">
+                    <img src="./images/hamanomachi2audio.png" alt="Worksheet Generator">
+                </a>
+            </div>
+		    <div class="box">
+                <a href="https://nagasakimark.github.io/champon2" target="_blank">
+                    <img src="./images/champon2.png" alt="Worksheet Generator">
+                </a>
+            </div>
+		    <div class="box">
                 <a href="https://nagasakimark.github.io/worksheetgenerator" target="_blank">
                     <img src="./images/worksheetgenerator.png" alt="Worksheet Generator">
                 </a>
