--- a/index.html
+++ b/index.html
@@ -66,18 +66,23 @@
     <div class="container">
         <div class="projects-grid">
 		    <div class="box">
+                <a href="https://nagasakimark.github.io/witchsoup" target="_blank">
+                    <img src="./images/magicsoup.png" alt="Magic Soup">
+                </a>
+            </div>
+		    <div class="box">
                 <a href="https://nagasakimark.github.io/hamanomachi2" target="_blank">
-                    <img src="./images/hamanomachi2.png" alt="Worksheet Generator">
+                    <img src="./images/hamanomachi2.png" alt="Hamanomachi 2">
                 </a>
             </div>
 		    <div class="box">
                 <a href="https://nagasakimark.github.io/hamanomachi2audio" target="_blank">
-                    <img src="./images/hamanomachi2audio.png" alt="Worksheet Generator">
+                    <img src="./images/hamanomachi2audio.png" alt="Hamanomachi 2 Audio">
                 </a>
             </div>
 		    <div class="box">
                 <a href="https://nagasakimark.github.io/champon2" target="_blank">
-                    <img src="./images/champon2.png" alt="Worksheet Generator">
+                    <img src="./images/champon2.png" alt="Champon Maker 2">
                 </a>
             </div>
 		    <div class="box">
