--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
     <div class="container">
         <div class="projects-grid">
 		    <div class="box">
+                <a href="https://nagasakimark.github.io/cashregister2" target="_blank">
+                    <img src="./images/restaurant2.png" alt="Cash Register 2">
+                </a>
+            </div>
+		    <div class="box">
                 <a href="https://nagasakimark.github.io/trickortreat" target="_blank">
                     <img src="./images/trickortreat.png" alt="Trick or Treat">
                 </a>
