--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
     <div class="container">
         <div class="projects-grid">
 		    <div class="box">
+                <a href="https://nagasakimark.github.io/digitalenglishboard" target="_blank">
+                    <img src="./images/digitalenglishboard.png" alt="Digital English Board">
+                </a>
+            </div>
+
+		    <div class="box">
                 <a href="https://nagasakimark.github.io/cashregister2" target="_blank">
                     <img src="./images/restaurant2.png" alt="Cash Register 2">
                 </a>
