--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
                     <img src="./images/digitalenglishboard.png" alt="Digital English Board">
                 </a>
             </div>
-
+		    <div class="box">
+                <a href="https://nagasakimark.github.io/poll" target="_blank">
+                    <img src="./images/poll.png" alt="Classroom Polls">
+                </a>
+            </div>
 		    <div class="box">
                 <a href="https://nagasakimark.github.io/cashregister2" target="_blank">
                     <img src="./images/restaurant2.png" alt="Cash Register 2">
@@ -104,11 +108,6 @@
 		    <div class="box">
                 <a href="https://nagasakimark.github.io/worksheetgenerator" target="_blank">
                     <img src="./images/worksheetgenerator.png" alt="Worksheet Generator">
-                </a>
-            </div>
-		            <div class="box">
-                <a href="https://nagasakimark.github.io/fruitpoll" target="_blank">
-                    <img src="./images/fruitpoll.png" alt="Fruit Poll">
                 </a>
             </div>
             <div class="box">
