Add 'Splatoon' project link and update others
Added a new project link for 'Splatoon' and updated the existing project links.

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
                 </a>
             </div>
 		    <div class="box">
+                <a href="https://nagasakimark.github.io/splatoon" target="_blank">
+                    <img src="./images/splatoon.png" alt="Splatoon">
+                </a>
+            </div>
+		    <div class="box">
                 <a href="https://nagasakimark.github.io/poll" target="_blank">
                     <img src="./images/poll.png" alt="Classroom Polls">
                 </a>
